--- a/services.html
+++ b/services.html
@@ -162,7 +162,7 @@
                                     <span class="flaticon-value"></span>
                                 </div>
                                 <div class="service-tite">
-                                    <h3>Graphics Design</h3>
+                                    <h3>Devlopment</h3>
                                 </div>
                                 <div class="service-content">
                                     <p>When you objectively analyze your business, you are likely to get a new perspective. These new perspectives propel your fresh strategy.</p>
@@ -299,7 +299,7 @@
                             <div class="single-widget text-widget">
                                 <div class="footer-log">
                                     <a href="index.html"></a>
-                                    <img class="logo_pi" src="assets/images/logo1.png" alt="e_DEVEVELOPERS">e_DEVEVELOPER
+                                    <img class="logo_pi" src="assets/images/logo1.png" alt="E_DEVEVELOPERS">E_DEVEVELOPER
                                 </div>
                                 <div class="widget-content">
                                     <p>Getting online is easy. Succeeding online is a different story. You’ll need than just a beautiful website to stand out these days.</p>
